--- a/PlasticIdentifier.csproj
+++ b/PlasticIdentifier.csproj
@@ -165,6 +165,9 @@
     <EmbeddedResource Include="Forms\DataSetCreate.resx">
       <DependentUpon>DataSetCreate.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ImageIdentification.resx">
+      <DependentUpon>ImageIdentification.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ObjectsView.resx">
       <DependentUpon>ObjectsView.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,9 +223,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Images\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
